Fix z-index issues

--- a/public/css/plugins/lw-hoverbox.less
+++ b/public/css/plugins/lw-hoverbox.less
@@ -4,7 +4,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 200;
+    z-index: 1150;
     padding: 1px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
