--- a/public/css/plugins/lw-multisuggest.less
+++ b/public/css/plugins/lw-multisuggest.less
@@ -80,7 +80,7 @@
 		padding: 0;
 		border: 1px solid #666;
 		background-color: #fff;
-		z-index:500;
+		z-index: 1150;
 		display:none;
 		max-height:200px;
 		overflow:auto;
