--- a/public/css/plugins/lw-overlay.less
+++ b/public/css/plugins/lw-overlay.less
@@ -14,7 +14,7 @@ body.lw_overlay_open .lw_overlay_wrapper {
 	right: 0;
 	bottom: 0; 
 	left: 0; 
-	z-index: 1050; 
+	z-index: 1150; 
 	overflow: hidden;
 	outline: 0;
 	-webkit-overflow-scrolling: touch;
@@ -36,7 +36,7 @@ body.lw_overlay_open .lw_overlay_wrapper {
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1040;
+    z-index: 1140;
     background-color: #000;
     filter: alpha(opacity=50);
     opacity: .5;
@@ -68,7 +68,7 @@ a.lw_overlay_close_button {
 	font-weight: bold; 
 	color: #fff; 
 	text-decoration: none; 
-	z-index: 10001;
+	z-index: 1200;
 
 	&:hover {
 		background-color: #b22;
